# aiyanazhang-1

./: .list-project.conf  PROJECT_LIST_README.md  PROJECT_SUMMARY.md  RAEDME.md  README.md  browser_config.ini  directory-browser.bat  list-project.sh  quick-test.bat  test-browser.bat  test-list-project.sh
.qoder/quests/: advanced-python-example.md  browse-current-directory-files.md  check-java-environment.md  check-local-java-environment.md  clean-duplicate-files-script.md  clean-recycle-bin-1758521652.md  clean-recycle-bin.md  clean-unused-files.md  command-line-test-script.md  current-java-configuration.md  dictionary-usage-example.md  execute-docker-command.md  file-operation-commands-list.md  initialize-react-project.md  install-npm-environment.md  list-project-content-and-modification-time.md  python-array-examples.md  python-threading-demo.md  script-optimization.md  set-end-time.md  shell-to-bat-converter.md  text-search-script.md  threading-demo.md  tuple-usage-demo.md  write-filename-script.md  write-hello-you.md  write-js-hello-world.md
beijing-weather/: PROJECT-COMPLETION-REPORT.md  README.md  deploy.sh  index.html  server.go  test.html
beijing-weather/docs/: implementation-summary.md
calculator-app/: jest.config.js  package-lock.json  package.json
calculator-app/src/: App.css  App.tsx  index.css
docker-command-executor/: README.md  docker-executor.py  requirements.txt  run_tests.py  verify.sh
docker-command-executor/config/: default.json
docker-command-executor/src/: __init__.py  (+6 more)
file-cleaner/: README.md  clean-files.py
hello-world-system/: PROJECT_SUMMARY.md  README.md  integration_test.sh  main.py
java-config-management/: README.md  pom.xml
java-environment-checker/: README.md  dependency-reduced-pom.xml  diagnostic-report.html  java-env-checker.bat  java-env-checker.sh  pom.xml  quick-report.json
linux-file-commands/: README.md  linux-file-commands.py  verify.sh
python-advanced-examples/: LICENSE  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml
python-advanced-examples/docs/: architecture.md  quick_start.md
python-advanced-examples/examples/: quick_start.py
python-advanced-examples/src/python_advanced_examples/: __init__.py
python-advanced-examples/src/python_advanced_examples/concurrency/: __init__.py  async_programming.py  multiprocessing_examples.py  threading_examples.py
python-advanced-examples/src/python_advanced_examples/core/: __init__.py  decorators.py  performance.py  registry.py  runner.py
python-advanced-examples/src/python_advanced_examples/data_processing/: __init__.py  data_streams.py  functional_programming.py  pipeline.py  reactive_programming.py
python-advanced-examples/src/python_advanced_examples/interfaces/: __init__.py  cli.py  web_interface.py
python-advanced-examples/src/python_advanced_examples/language_features/: __init__.py  advanced_decorators.py  context_managers.py  generators.py  type_hints.py
python-advanced-examples/src/python_advanced_examples/metaprogramming/: __init__.py  descriptors.py  dynamic_classes.py  metaclasses.py
python-advanced-examples/src/python_advanced_examples/monitoring/: __init__.py  benchmark_suite.py  performance_monitor.py
python-advanced-examples/src/python_advanced_examples/performance/: __init__.py  algorithm_optimization.py  caching_strategies.py  memory_optimization.py
python-advanced-examples/src/python_advanced_examples/web/: __init__.py  api.py  static.py  templates.py
python-advanced-examples/tests/: __init__.py
python-advanced-examples/tests/unit/: test_core.py
python-threading-demo/: PROJECT_SUMMARY.md  README.md  demo.py  main.py  requirements.txt  test_project.py
python-tuple-demo/: README.md  main.py  verify_project.py
ruby-basics-demo/: .rubocop.yml  Gemfile  LICENSE  README.md  main.rb  verify_project.sh
ssh-key-management/: README.md
test-dir/: config.json  test.txt
text-search-tool/: README.md  text-search.sh
trash-cleaner/: PROJECT_IMPLEMENTATION_SUMMARY.md  README.md  test_new_features.sh  trash-cleaner.sh
weather-app/: README.md  index-standalone.html  index.html  jest.config.js  package-lock.json  package.json  serve.js  vite.config.js
(+234 files in other folders)
